app3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: app3
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
