app3/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app3-httproute
  namespace: app3
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "app3.traefik.lc"
  rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: authentik-forwardauth
      matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: app3-service
        port: 8080
        namespace: app3
